--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
-  <body style="background-color: grey;">
+  <body>
     <div id="unity-container" class="unity-desktop">
       <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
       <div id="unity-loading-bar">
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/5.loader.js";
+      var loaderUrl = buildUrl + "/6.loader.js";
       var config = {
-        dataUrl: buildUrl + "/5.data",
-        frameworkUrl: buildUrl + "/5.framework.js",
-        codeUrl: buildUrl + "/5.wasm",
+        dataUrl: buildUrl + "/6.data",
+        frameworkUrl: buildUrl + "/6.framework.js",
+        codeUrl: buildUrl + "/6.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "EduVanta",
